cleanup and layouts

--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,7 @@ permalink: pretty
 markdown: rdiscount
 
 stylus:
-  compress: true
+  compress: False
 
-prose:
-  rooturl: '_content'
-  siteurl: '/responsive-app'
-  relativeLinks: 'links.jsonp'
-  media: 'media'
-  metadata:
-    _content:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "main"
+exclude: ['Gemfile','Gemfile.lock']
 
