--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ markdown: rdiscount
 stylus:
   compress: False
 
-exclude: ['Gemfile','Gemfile.lock']
+exclude: ['Gemfile','Gemfile.lock','makefile']
 
